--- a/src/app/home/bmicalculator/bmicalculator.component.css
+++ b/src/app/home/bmicalculator/bmicalculator.component.css
@@ -3,7 +3,7 @@
   border-radius: 10px;
   padding: 20px;
   margin: 20px auto;
-  max-width: 400px;
+  max-width: 600px;
   background-color: #f7f7f7;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
 }
@@ -21,6 +21,7 @@
 
 input[type="text"],
 input[type="number"],
+input[type="date"],
 select {
   width: 100%;
   padding: 10px;
@@ -32,7 +33,7 @@ select {
 #btn-calc {
   width: 100%;
   padding: 10px;
-  background-color: #79AC78;
+  background-color: #79ac78;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -43,7 +44,7 @@ input:hover,
 input:focus,
 select:hover,
 select:focus {
-  border-color: #B0D9B1;
+  border-color: #b0d9b1;
 }
 
 .result {
