--- a/src/app/home/monthly-height-records-table/monthly-height-records-table.component.html
+++ b/src/app/home/monthly-height-records-table/monthly-height-records-table.component.html
@@ -2,85 +2,27 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 />
-<div id="updateCon">
-  <div id="updateMonthlyHeightModal" #updateMonthlyHeightModal class="modal">
-    <div class="modal-content">
-      <form>
-        <legend>
-          Monthly Records of Height and Height Status Wasted and Severely Wasted
-          Cases
-        </legend>
-        <div>
-          <label for="weight">Weight:</label>
-          <input
-            type="text"
-            id="weight"
-            name="weight"
-            [(ngModel)]="monthlyHeightRecordsData.weight"
-          />
-        </div>
-        <div>
-          <label for="heightOrLength">Height Length:</label>
-          <input
-            type="text"
-            id="heightOrLength"
-            name="heightOrLength"
-            [(ngModel)]="monthlyHeightRecordsData.heightOrLength"
-          />
-        </div>
-        <div>
-          <label for="nutritionalStatus">Nutritional Status:</label>
-          <input
-            type="text"
-            id="nutritionalStatus"
-            name="nutritionalStatus"
-            [(ngModel)]="monthlyHeightRecordsData.nutritionalStatus"
-            required
-          />
-        </div>
-        <div>
-          <label for="Date">Date:</label>
-          <input
-            type="date"
-            id="Date"
-            name="Date"
-            [(ngModel)]="monthlyHeightRecordsData.Date"
-            required
-          />
-        </div>
-        <div>
-          <label for="measurementMonth">Measurement Month:</label>
-          <select
-            id="measurementMonth"
-            name="measurementMonth"
-            [(ngModel)]="monthlyHeightRecordsData.measurementMonth"
-          >
-            <option value="January">January</option>
-            <option value="February">February</option>
-            <option value="March">March</option>
-            <option value="May">May</option>
-            <option value="June">June</option>
-            <option value="July">July</option>
-            <option value="August">August</option>
-            <option value="September">September</option>
-            <option value="October">October</option>
-            <option value="November">November</option>
-            <option value="December">December</option>
-          </select>
-        </div>
-        <button class="close" (click)="closeUpdateMonthlyHeightModal()">
-          Cancel
-        </button>
-
-        <button class="btn btn-primary" (click)="updateMonthlyHeight()">
-          Update Child
-        </button>
-      </form>
-    </div>
-  </div>
-</div>
 
 <fieldset class="fieldset1">
+  <div>
+    <label for="searchChild">Search Child:</label>
+    <input
+      list="childList"
+      type="text"
+      id="searchChild"
+      name="searchChild"
+      [(ngModel)]="searchInput"
+      (input)="onSearchInputChange()"
+    />
+    <datalist id="childList">
+      <option
+        *ngFor="let child of monthlyHeightRecords"
+        [value]="child.nameOfChild"
+      >
+        {{ child.nameOfChild }}
+      </option>
+    </datalist>
+  </div>
   <div class="filter-container">
     <label for="barangay">Barangay:</label>
     <select
@@ -156,7 +98,7 @@
     <select
       id="measurementMonth"
       name="measurementMonth"
-      [(ngModel)]="selectedMeasurementMonth"
+      [(ngModel)]="selectedMonth"
       (change)="filterRecords()"
       required
     >
@@ -199,12 +141,15 @@
                 <th>Nutritional Status</th>
                 <th>Barangay</th>
                 <th>Date</th>
-                <th>Measurement Month</th>
                 <th>Action</th>
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let record of monthlyHeightRecords">
+              <tr
+                *ngFor="
+                  let record of monthlyHeightRecords.slice(startIndex, endIndex)
+                "
+              >
                 <td>{{ record.monthlyHeightRecordsId }}</td>
                 <td>
                   {{ record.nameOfChild }}
@@ -215,18 +160,11 @@
                 <td>{{ record.heightOrLength }}</td>
                 <td>{{ record.nutritionalStatus }}</td>
                 <td>{{ record.barangay }}</td>
-                <td>{{ record.Date }}</td>
-                <td>{{ record.measurementMonth }}</td>
+                <td>{{ record.Date | date : "medium" : "Asia/Manila" }}</td>
                 <td>
                   <a class="btn btn-sm btn-outline-dark"
                     ><i class="fas fa-up-right-from-square"></i
                   ></a>
-                  <button
-                    (click)="openUpdateMonthlyHeightModal(record)"
-                    class="update btn btn-sm btn-outline-warning"
-                  >
-                    Update
-                  </button>
                   <button
                     (click)="removeMonthlyHeight(record)"
                     class="delete btn btn-sm btn-outline-danger"
