--- a/src/app/home/monthly-records-infant/monthly-records-infant.component.html
+++ b/src/app/home/monthly-records-infant/monthly-records-infant.component.html
@@ -3,127 +3,26 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 />
 
-<div id="updateCon">
-  <div id="updateMonthlyInfantModal" #updateMonthlyInfantModal class="modal">
-    <div class="modal-content">
-      <form>
-        <legend class="legend1">
-          Monthly Records of Weight and Weight Status Infants 0-23 Months
-        </legend>
-        <fieldset>
-          <div>
-            <legend class="legend1">-Measurement-</legend>
-          </div>
-          <div>
-            <label for="weight">Weight:</label>
-            <input
-              type="number"
-              id="weight"
-              name="weight"
-              [(ngModel)]="monthlyInfantRecordsData.weight"
-            />
-          </div>
-          <div>
-            <label for="heightOrLength">Height/Length:</label>
-            <input
-              type="number"
-              id="heightOrLength"
-              name="heightOrLength"
-              [(ngModel)]="monthlyInfantRecordsData.heightOrLength"
-            />
-          </div>
-          <div>
-            <label for="weightForLengthOrHeight"
-              >Weight for Length/Height:</label
-            >
-            <input
-              type="number"
-              id="weightForLengthOrHeight"
-              name="weightForLengthOrHeight"
-              [(ngModel)]="monthlyInfantRecordsData.weightForLengthOrHeight"
-            />
-          </div>
-        </fieldset>
-        <fieldset>
-          <div>
-            <legend class="legend1">-Nutritional Status-</legend>
-          </div>
-          <div>
-            <label for="weightForAge">Weight for Age:</label>
-            <input
-              type="text"
-              id="weightForAge"
-              name="weightForAge"
-              [(ngModel)]="monthlyInfantRecordsData.weightForAge"
-              required
-            />
-          </div>
-          <div>
-            <label for="heightOrLengths">Height/Length (H/L):</label>
-            <input
-              type="text"
-              id="heightOrLengths"
-              name="heightOrLengths"
-              [(ngModel)]="monthlyInfantRecordsData.heightOrLengths"
-              required
-            />
-          </div>
-          <div>
-            <label for="weightForLengthorHeight"
-              >Weight for Length/Height (W/L/H):</label
-            >
-            <input
-              type="text"
-              id="weightForLengthOrHeight"
-              name="weightForLengthOrHeight"
-              [(ngModel)]="monthlyInfantRecordsData.weightForLengthorHeight"
-              required
-            />
-          </div>
-        </fieldset>
-        <div>
-          <label for="Date">Date:</label>
-          <input
-            type="date"
-            id="Date"
-            name="Date"
-            [(ngModel)]="monthlyInfantRecordsData.Date"
-            required
-          />
-        </div>
-        <div>
-          <label for="measurementMonth">Measurement Month:</label>
-          <select
-            id="measurementMonth"
-            name="measurementMonth"
-            [(ngModel)]="monthlyInfantRecordsData.measurementMonth"
-          >
-            <option value="January">January</option>
-            <option value="February">February</option>
-            <option value="March">March</option>
-            <option value="May">May</option>
-            <option value="June">June</option>
-            <option value="July">July</option>
-            <option value="August">August</option>
-            <option value="September">September</option>
-            <option value="October">October</option>
-            <option value="November">November</option>
-            <option value="December">December</option>
-          </select>
-        </div>
-        <button class="close" (click)="closeUpdateMonthlyInfantModal()">
-          Cancel
-        </button>
-
-        <button class="btn btn-primary" (click)="updateMonthlyInfant()">
-          Update Child
-        </button>
-      </form>
-    </div>
-  </div>
-</div>
-
 <fieldset class="fieldset1">
+  <div>
+    <label for="searchChild">Search Child:</label>
+    <input
+      list="childList"
+      type="text"
+      id="searchChild"
+      name="searchChild"
+      [(ngModel)]="searchInput"
+      (input)="onSearchInputChange()"
+    />
+    <datalist id="childList">
+      <option
+        *ngFor="let child of monthlyInfantRecords"
+        [value]="child.nameOfChild"
+      >
+        {{ child.nameOfChild }}
+      </option>
+    </datalist>
+  </div>
   <div class="filter-container">
     <label for="barangay">Barangay:</label>
     <select
@@ -199,7 +98,7 @@
     <select
       id="measurementMonth"
       name="measurementMonth"
-      [(ngModel)]="selectedMeasurementMonth"
+      [(ngModel)]="selectedMonth"
       (change)="filterRecords()"
       required
     >
@@ -240,12 +139,15 @@
               <th>Nutritional Status</th>
               <th>Barangay</th>
               <th>Date</th>
-              <th>Measurement Month:</th>
               <th>Action</th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let record of monthlyInfantRecords">
+            <tr
+              *ngFor="
+                let record of monthlyInfantRecords.slice(startIndex, endIndex)
+              "
+            >
               <td>{{ record.monthlyInfantRecordsId }}</td>
               <td>
                 {{ record.nameOfChild }}
@@ -257,7 +159,7 @@
                   <li><strong>W:</strong> {{ record.weight }}</li>
                   <li>
                     <strong>H/L:</strong>
-                    {{ record.heightOrLength }}
+                    {{ record.height }}
                   </li>
                   <li>
                     <strong>W/L/H:</strong>
@@ -272,8 +174,8 @@
                     {{ record.weightForAge }}
                   </li>
                   <li>
-                    <strong>H/L:</strong>
-                    {{ record.heightOrLengths }}
+                    <strong>HF/A:</strong>
+                    {{ record.heightForAge }}
                   </li>
                   <li>
                     <strong>W/L/H:</strong>
@@ -282,18 +184,11 @@
                 </ul>
               </td>
               <td>{{ record.barangay }}</td>
-              <td>{{ record.Date }}</td>
-              <td>{{ record.measurementMonth }}</td>
+              <td>{{ record.Date | date : "medium" : "Asia/Manila" }}</td>
               <td>
                 <a class="btn btn-sm btn-outline-dark"
                   ><i class="fas fa-up-right-from-square"></i
                 ></a>
-                <button
-                  (click)="openUpdateMonthlyInfantModal(record)"
-                  class="update btn btn-sm btn-outline-warning"
-                >
-                  Update
-                </button>
                 <button
                   (click)="removeMonthlyInfant(record)"
                   class="delete btn btn-sm btn-outline-danger"
