--- a/src/app/home/profile-table/profile-table.component.html
+++ b/src/app/home/profile-table/profile-table.component.html
@@ -48,26 +48,6 @@
           />
         </div>
         <div>
-          <label for="age">Age:</label>
-          <input
-            type="text"
-            id="age"
-            name="age"
-            [(ngModel)]="childRecordsData.age"
-            required
-          />
-        </div>
-        <div>
-          <label for="ageInMonths">Age in Months</label>
-          <input
-            type="text"
-            id="ageInMonths"
-            name="ageInMonths"
-            [(ngModel)]="childRecordsData.ageInMonths"
-            required
-          />
-        </div>
-        <div>
           <label for="address">Address:</label>
           <input
             type="text"
@@ -150,6 +130,16 @@
           />
         </div>
         <div>
+          <label for="NameOfHouseholdHead">Name Of Household Head:</label>
+          <input
+            type="text"
+            id="NameOfHouseholdHead"
+            name="NameOfHouseholdHead"
+            [(ngModel)]="childRecordsData.NameOfHouseholdHead"
+            required
+          />
+        </div>
+        <div>
           <label>Gender:</label>
           <input
             type="radio"
@@ -191,6 +181,28 @@
 </div>
 
 <fieldset class="fieldset1">
+  <div>
+    <label for="searchChild">Search Child:</label>
+    <input
+      list="childList"
+      type="text"
+      id="searchChild"
+      name="searchChild"
+      [(ngModel)]="searchInput"
+      (input)="onSearchInputChange()"
+    />
+    <datalist id="childList">
+      <option
+        *ngFor="let child of childRecords"
+        [value]="
+          child.firstName +
+          ' ' +
+          (child.middleName ? child.middleName + ' ' : '') +
+          child.lastName
+        "
+      ></option>
+    </datalist>
+  </div>
   <div class="filter-container">
     <label for="barangay">Barangay:</label>
     <select
@@ -285,12 +297,11 @@
                 <th>Middle Name</th>
                 <th>Last Name</th>
                 <th>Birthday (dd/mm/yyyy)</th>
-                <th>Age</th>
-                <th>Age in Months</th>
                 <th>Address</th>
                 <th>Barangay</th>
                 <th>Father's Name</th>
                 <th>Mother's Name</th>
+                <th>Name Of HouseHold Head</th>
                 <th>Gender</th>
                 <th>Date</th>
                 <th>Action</th>
@@ -305,12 +316,11 @@
                 <td>{{ child.middleName }}</td>
                 <td>{{ child.lastName }}</td>
                 <td>{{ child.birthday }}</td>
-                <td>{{ child.age }}</td>
-                <td>{{ child.ageInMonths }}</td>
                 <td>{{ child.address }}</td>
                 <td>{{ child.barangay }}</td>
                 <td>{{ child.fatherName }}</td>
                 <td>{{ child.motherName }}</td>
+                <td>{{ child.NameOfHouseholdHead }}</td>
                 <td>{{ child.gender }}</td>
                 <td>{{ child.date }}</td>
                 <td>
