--- a/src/app/home/quarterly-records/quarterly-records.component.css
+++ b/src/app/home/quarterly-records/quarterly-records.component.css
@@ -3,7 +3,7 @@
 }
 
 .container {
-  max-width: 600px;
+  max-width: 800px;
   margin: 20px auto;
   padding: 20px;
   border: 1px solid #ccc;
@@ -19,7 +19,7 @@
 }
 
 .navigation-buttons button {
-  background-color: #79AC78;
+  background-color: #79ac78;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -28,11 +28,11 @@
 }
 
 .navigation-buttons button:hover {
-  background-color: #B0D9B1;
+  background-color: #b0d9b1;
 }
 
 form {
-  max-width: 400px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
@@ -65,12 +65,12 @@ input:hover,
 input:focus,
 select:hover,
 select:focus {
-  border-color: #79AC78;
+  border-color: #79ac78;
 }
 
 /* Style submit button */
 button[type="submit"] {
-  background-color: #79AC78;
+  background-color: #79ac78;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -81,7 +81,7 @@ button[type="submit"] {
 
 /* Style submit button on hover */
 button[type="submit"]:hover {
-  background-color: #B0D9B1;
+  background-color: #b0d9b1;
 }
 
 .fieldset1 {
