--- a/src/app/home/quarterly-table/quarterly-table.component.html
+++ b/src/app/home/quarterly-table/quarterly-table.component.html
@@ -67,6 +67,22 @@
 </div>
 
 <fieldset class="fieldset1">
+  <div>
+    <label for="searchChild">Search Child:</label>
+    <input
+      list="childList"
+      type="text"
+      id="searchChild"
+      name="searchChild"
+      [(ngModel)]="searchInput"
+      (input)="onSearchInputChange()"
+    />
+    <datalist id="childList">
+      <option *ngFor="let child of quarterlyTable" [value]="child.nameOfChild">
+        {{ child.nameOfChild }}
+      </option>
+    </datalist>
+  </div>
   <div class="filter-container">
     <label for="barangay">Barangay:</label>
     <select
