--- a/src/app/page/landing-page/landing-page.component.css
+++ b/src/app/page/landing-page/landing-page.component.css
@@ -49,16 +49,83 @@
 
 .home img {
   width: 100%;
-  height: 600px;
+  height: auto;
+  margin-top: 10px;
   object-position: center;
   object-fit: cover;
+  opacity: 0.7;
+  border-radius: 10px;
 }
 
-.home1 img {
+.home1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start; /* aligns items to the top */
+  gap: 10px;
+}
+
+.home1 div {
+  width: 90%;
+  padding: 10px;
+  background-color: #f8f9fa;
+  border-radius: 10px;
+  font-size: 12px;
+}
+
+.home1 div img {
   width: 100%;
-  height: 1100px;
+  height: auto;
   object-position: center;
   object-fit: cover;
+  border-radius: 10px;
+}
+
+.home2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start; /* aligns items to the top */
+  gap: 10px;
+}
+
+.home2 div {
+  width: 90%;
+  padding: 10px;
+  background-color: #f8f9fa;
+  border-radius: 10px;
+  font-size: 8px;
+}
+
+.home2 div img {
+  width: 100%;
+  height: auto;
+  object-position: center;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+
+.home3 {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start; /* aligns items to the top */
+  gap: 10px;
+}
+
+.home3 div {
+  width: 90%;
+  padding: 10px;
+  background-color: #f8f9fa;
+  border-radius: 10px;
+  font-size: 20px;
+}
+
+.home3 div img {
+  width: 100%;
+  height: auto;
+  object-position: center;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-top: 10px;
 }
 
 .homecontent {
@@ -67,6 +134,7 @@
   left: 40%;
   transform: translate(-50%, -50%);
 }
+
 .homecontent h1 {
   font-size: 40px;
   color: rgb(113, 238, 128);
