--- a/src/app/page/landing-page/landing-page.component.html
+++ b/src/app/page/landing-page/landing-page.component.html
@@ -7,15 +7,12 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="">Home <span class="sr-only"></span></a>
+        <a class="nav-link" routerLink="/"
+          >Home <span class="sr-only"></span
+        ></a>
       </li>
       <li class="nav-item">
-        <a
-          class="nav-link"
-          routerLink="/+
-          about"
-          >About</a
-        >
+        <a class="nav-link" routerLink="/about">About</a>
       </li>
 
       <li class="nav-item">
@@ -29,15 +26,186 @@
 
   <div class="homecontent">
     <h1>Welcome to San Juan Batangas</h1>
-    <a routerLink="/about" class="btn btn-lg btn-light">About</a> &nbsp;
-    <a routerLink="/login" class="btn btn-lg btn-primary">Login</a>
   </div>
 </section>
 <section class="home1">
-  <img src="/assets/smart.png" />
+  <div>
+    <img src="/assets/smart.png" />
+  </div>
+  <div>
+    <div>
+      <p>
+        The smart nutrition chart for kids shows the recommended daily amounts
+        of nutrients like protein, carbs, fats, vitamins, and minerals that
+        support children's growth. It provides food sources for each nutrient,
+        helping parents plan a varied, balanced, healthy diet.
+      </p>
+
+      <h3>Fats:</h3>
+      <p>
+        These are a source of energy and help the body absorb some vitamins.
+        They also provide essential fatty acids that the body cannot make. The
+        food sources mentioned are butter, oil, nuts, and seeds.
+      </p>
+
+      <h3>Iron:</h3>
+      <p>
+        This is a mineral that helps the blood carry oxygen to the cells. It
+        also supports the immune system and brain function. The food sources
+        listed are meat, fish, spinach, and beans.
+      </p>
+
+      <h3>Carbohydrates:</h3>
+      <p>
+        These are the body’s main source of energy. The food sources mentioned
+        are bread, rice, pasta, and cereal.
+      </p>
+
+      <h3>Protein:</h3>
+      <p>
+        This is essential for growth and repair in the body. The food sources
+        listed are meat, fish, eggs, beans, and nuts.
+      </p>
+
+      <h3>Calcium:</h3>
+      <p>
+        This is necessary for strong bones and teeth. The food sources mentioned
+        are milk, cheese, and yogurt.
+      </p>
+
+      <h3>Vitamin C:</h3>
+      <p>
+        This is important for growth, development, and repair of all body
+        tissues. The food source listed is oranges.
+      </p>
+    </div>
+  </div>
+</section>
+<section class="home2">
+  <div>
+    <div>
+      <p>
+        List of 10 commandments for healthy eating in Tagalog, referred to as
+        “10 Kumainments”
+      </p>
+
+      <h3>1. Kumain ng iba’t ibang pagkain:</h3>
+      <p>
+        Eat a variety of foods every day to get the nutrients needed by the
+        body.
+      </p>
+
+      <h3>
+        Sa unang anim na buwan ni baby, breastfeeding lamang at mula six months,
+        bigyan din siya ng ibang angkop na pagkain:
+      </h3>
+      <p>
+        Breastfeed infants exclusively from birth up to six months then give
+        appropriate complementary foods while continuing breastfeeding for two
+        years and beyond for optimum growth and development.
+      </p>
+
+      <h3>Kumain ng gulay at prutas araw-araw:</h3>
+      <p>
+        Eat more vegetables and fruits everyday to get the essential vitamins,
+        minerals, and fiber for regulation of body processes.
+      </p>
+
+      <h3>Kumain ng isda karne, at iba pang pagkaing may protina:</h3>
+      <p>
+        Consume fish, lean meat, poultry, egg, dried beans, or nuts daily for
+        growth and repair of body tissues.
+      </p>
+
+      <h3>Uminom ng gatas at kumain ng pagkaing mayaman sa calcium:</h3>
+      <p>
+        Consume milk, milk products, and other calcium-rich foods such as small
+        fish and shellfish everyday for healthy bones and teeth.
+      </p>
+
+      <h3>Tiyaking malinis at ligtas ang ating pagkain at tubig:</h3>
+      <p>
+        Consume safe foods and water to prevent diarrhea and other food and
+        water-borne diseases.
+      </p>
+
+      <h3>Gumamit ng iodized salt:</h3>
+      <p>Use iodized salt to prevent Iodine Deficiency Disorders.</p>
+
+      <h3>Hinay-hinay sa maaalat, mamantika, at matatamis:</h3>
+      <p>
+        Limit intake of salty, fried, fatty, and sugar-rich foods to prevent
+        cardiovascular diseases.
+      </p>
+
+      <h3>Panatilihin ang tamang timbang:</h3>
+      <p>
+        Attain normal body weight through proper diet and moderate physical
+        activity to maintain good health and help prevent obesity.
+      </p>
+
+      <h3>Maging aktibo. Iwasan ang alak at huwag manigarilyo:</h3>
+      <p>
+        Be physically active, make healthy food choices, manage stress, avoid
+        alcoholic beverages, and do not smoke to help prevent lifestyle-related
+        non-communicable diseases.
+      </p>
+    </div>
+  </div>
+  <div>
+    <img src="/assets/Kumainment.jpg" />
+  </div>
+</section>
+<section class="home3">
+  <div>
+    <img src="/assets/non-nutritional.png" />
+  </div>
+  <div>
+    <div>
+      <h3>The Importance of non-nutrients in a child’s diet.</h3>
+
+      <h3>Antioxidants:</h3>
+      <p>
+        These are molecules that protect our body from harmful toxins and free
+        radicals. They are found in bright-colored vegetables and fruits like
+        melons, berries, carrots, and red cabbage. Antioxidants are known for
+        their anti-inflammatory abilities. They may protect cells in your body
+        from free radical damage that can occur from exposure to certain
+        chemicals, smoking, pollution, radiation, and as a byproduct of normal
+        metabolism. Antioxidants are found in many foods and include selenium,
+        vitamin A and related carotenoids, vitamins C and E, plus various
+        phytochemicals such as lycopene, lutein, and quercetin.
+      </p>
+
+      <h3>Dietary Fiber:</h3>
+      <p>
+        This is a form of carbohydrate that helps in reducing bloating. Dietary
+        fiber increases the weight and size of your stool and softens it, making
+        it easier to pass and decreasing your chance of constipation. It also
+        helps maintain bowel health, lowers cholesterol levels, helps control
+        blood sugar levels, aids in achieving a healthy weight, and helps you
+        live longer. Dietary fiber is found mainly in fruits, vegetables, whole
+        grains, and legumes.
+      </p>
+
+      <h3>Phytonutrients:</h3>
+      <p>
+        Phytonutrients are natural chemicals or compounds produced by plants.
+        They keep plants healthy, protecting them from insects and the sun.
+        Phytonutrients also have antioxidant and anti-inflammatory properties
+        that can help support a healthy human body. There are thousands of
+        phytonutrients found in plants and related foods. Some of the most
+        common phytonutrients are carotenoids, ellagic acid, resveratrol,
+        flavonoids, phytoestrogens, and glucosinolates5. Phytonutrients play an
+        essential role in maintaining health and preventing disease. They fight
+        oxidative stress, reduce inflammation, and enhance immunity.
+      </p>
+    </div>
+  </div>
 </section>
 
 <!-- footer -->
-<footer class="text-center mt-2">
-  <p>&copy; San Juan Batangas. All right reserved</p>
+<footer style="text-align: center; margin-top: 2rem">
+  <p>&copy; {{ currentYear }} San Juan Batangas. All right reserved.</p>
 </footer>
+<router-outlet></router-outlet>
